// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders add without crashing 1`] = `
<Icon
  name="add"
>
  <DefaultIcon
    name="add"
  >
    <Add
      name="add"
    >
      <IconWrapper
        name="add"
      >
        <div
          className="CohubIcon addIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              height={24}
              version="1.1"
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M19,13h-6v6h-2v-6h-6v-2h6v-6h2v6h6v2Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Add>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders archive without crashing 1`] = `
<Icon
  name="archive"
>
  <DefaultIcon
    name="archive"
  >
    <Archive
      name="archive"
    >
      <IconWrapper
        defaultColor="hsl(353, 66%, 55%)"
        name="archive"
      >
        <div
          className="CohubIcon archiveIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M20.54,5.23l-1.39,-1.68c-0.27,-0.34 -0.68,-0.55 -1.15,-0.55h-12c-0.47,0 -0.88,0.21 -1.16,0.55l-1.38,1.68c-0.29,0.34 -0.46,0.79 -0.46,1.27v12.5c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2v-12.5c0,-0.48 -0.17,-0.93 -0.46,-1.27Zm-8.54,12.27l-5.5,-5.5h3.5v-2h4v2h3.5l-5.5,5.5Zm-6.88,-12.5l0.81,-1h12l0.94,1h-13.75Z"
                fill="hsl(353, 66%, 55%)"
              />
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Archive>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders arrowDown without crashing 1`] = `
<Icon
  name="arrowDown"
>
  <DefaultIcon
    name="arrowDown"
  >
    <ArrowDown
      name="arrowDown"
    >
      <IconWrapper
        defaultColor="hsl(353, 66%, 55%)"
        name="arrowDown"
      >
        <div
          className="CohubIcon arrowDownIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 8 11"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.86366 9.63634L3.51805 9.99766L3.86366 10.3282L4.20927 9.99766L3.86366 9.63634ZM0.381684 6.99766L3.51805 9.99766L4.20927 9.27502L1.07291 6.27502L0.381684 6.99766ZM4.20927 9.99766L7.34563 6.99766L6.65441 6.27502L3.51805 9.27502L4.20927 9.99766ZM4.36366 9.49998V0.772705H3.36366V9.49998H4.36366Z"
                fill="hsl(353, 66%, 55%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </ArrowDown>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders arrowUp without crashing 1`] = `
<Icon
  name="arrowUp"
>
  <DefaultIcon
    name="arrowUp"
  >
    <ArrowUp
      name="arrowUp"
    >
      <IconWrapper
        defaultColor="hsl(114, 35%, 52%)"
        name="arrowUp"
      >
        <div
          className="CohubIcon arrowUpIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 8 11"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.13636 1.27271L4.48198 0.911384L4.13636 0.580799L3.79075 0.911384L4.13636 1.27271ZM7.61834 3.91138L4.48198 0.911384L3.79075 1.63403L6.92712 4.63403L7.61834 3.91138ZM3.79075 0.911384L0.654389 3.91138L1.34561 4.63403L4.48198 1.63403L3.79075 0.911384ZM3.63636 1.40907V10.1363H4.63636V1.40907H3.63636Z"
                fill="hsl(114, 35%, 52%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </ArrowUp>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders asterisk without crashing 1`] = `
<Icon
  name="asterisk"
>
  <DefaultIcon
    name="asterisk"
  >
    <Asterisk
      name="asterisk"
    >
      <IconWrapper
        name="asterisk"
      >
        <div
          className="CohubIcon asteriskIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
              <path
                d="M21,10h-5.535l2.767,-4.794l-3.463,-2l-2.769,4.794l-2.768,-4.794l-3.463,2l2.769,4.794h-5.538v4h5.537l-2.768,4.795l3.463,2l2.769,-4.797l2.768,4.795l3.463,-2l-2.767,-4.793h5.535Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Asterisk>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders back without crashing 1`] = `
<Icon
  name="back"
>
  <DefaultIcon
    name="back"
  >
    <Back
      name="back"
    >
      <IconWrapper
        name="back"
      >
        <div
          className="CohubIcon backIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H7.83L13.42 5.41L12 4L4 12L12 20L13.41 18.59L7.83 13H20V11Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Back>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders bell without crashing 1`] = `
<Icon
  name="bell"
>
  <DefaultIcon
    name="bell"
  >
    <Bell
      name="bell"
    >
      <IconWrapper
        name="bell"
      >
        <div
          className="CohubIcon bellIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              height={24}
              version="1.1"
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M12,22c1.1,0 2,-0.9 2,-2h-4c0,1.1 0.89,2 2,2Zm6,-6v-5c0,-3.07 -1.64,-5.64 -4.5,-6.32v-0.68c0,-0.83 -0.67,-1.5 -1.5,-1.5c-0.83,0 -1.5,0.67 -1.5,1.5v0.68c-2.87,0.68 -4.5,3.24 -4.5,6.32v5l-2,2v1h16v-1l-2,-2Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Bell>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders boxAdd without crashing 1`] = `
<Icon
  name="boxAdd"
>
  <DefaultIcon
    name="boxAdd"
  >
    <BoxAdd
      name="boxAdd"
    >
      <IconWrapper
        name="boxAdd"
      >
        <div
          className="CohubIcon boxAddIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              height={24}
              version="1.1"
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
              <path
                d="M2,8.006h16v5.994h2v-6.994c0,-0.008 -0.004,-0.012 -0.004,-0.019c-0.002,-0.116 -0.026,-0.229 -0.068,-0.339c-0.011,-0.028 -0.025,-0.053 -0.039,-0.08c-0.019,-0.038 -0.031,-0.08 -0.057,-0.117l-4,-6c-0.186,-0.278 -0.498,-0.445 -0.832,-0.445h-10c-0.334,-5.20417e-18 -0.646,0.167 -0.832,0.445l-4,6c-0.025,0.037 -0.038,0.08 -0.057,0.117c-0.013,0.028 -0.028,0.052 -0.039,0.08c-0.042,0.11 -0.066,0.223 -0.068,0.339c-3.46945e-18,0.007 -0.004,0.012 -0.004,0.019v12c0,0.552 0.447,1 1,1h13v-2h-12v-10Zm15.131,-2h-6.131v-4h3.465l2.666,4Zm-11.596,-4h3.465v4h-6.131l2.666,-4Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M24,19h-3v-3h-2v3h-3v2h3v3h2v-3h3Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </BoxAdd>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders calculator without crashing 1`] = `
<Icon
  name="calculator"
>
  <DefaultIcon
    name="calculator"
  >
    <Calculator
      name="calculator"
    >
      <IconWrapper
        name="calculator"
      >
        <div
          className="CohubIcon calculatorIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 30 30"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.2498 2.50002H8.74976C7.37101 2.50002 6.24976 3.62252 6.24976 5.00002V25C6.24976 26.3788 7.37101 27.5 8.74976 27.5H21.2498C22.6298 27.5 23.7498 26.3788 23.7498 25V5.00002C23.7498 3.62252 22.6298 2.50002 21.2498 2.50002ZM21.2498 5.00002L21.2485 10H8.74976V5.00002H21.2498ZM8.74976 25V12.5H21.2485L21.246 25H8.74976Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M11.2498 16.2501C11.9401 16.2501 12.4998 15.6904 12.4998 15.0001C12.4998 14.3097 11.9401 13.7501 11.2498 13.7501C10.5594 13.7501 9.99976 14.3097 9.99976 15.0001C9.99976 15.6904 10.5594 16.2501 11.2498 16.2501Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M14.9998 16.2501C15.6901 16.2501 16.2498 15.6904 16.2498 15.0001C16.2498 14.3097 15.6901 13.7501 14.9998 13.7501C14.3094 13.7501 13.7498 14.3097 13.7498 15.0001C13.7498 15.6904 14.3094 16.2501 14.9998 16.2501Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M18.7498 16.2501C19.4401 16.2501 19.9998 15.6904 19.9998 15.0001C19.9998 14.3097 19.4401 13.7501 18.7498 13.7501C18.0594 13.7501 17.4998 14.3097 17.4998 15.0001C17.4998 15.6904 18.0594 16.2501 18.7498 16.2501Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M19.9998 6.25009H17.4998V8.75009H19.9998V6.25009Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M11.2498 20.0001C11.9401 20.0001 12.4998 19.4404 12.4998 18.7501C12.4998 18.0597 11.9401 17.5001 11.2498 17.5001C10.5594 17.5001 9.99976 18.0597 9.99976 18.7501C9.99976 19.4404 10.5594 20.0001 11.2498 20.0001Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M14.9998 20.0001C15.6901 20.0001 16.2498 19.4404 16.2498 18.7501C16.2498 18.0597 15.6901 17.5001 14.9998 17.5001C14.3094 17.5001 13.7498 18.0597 13.7498 18.7501C13.7498 19.4404 14.3094 20.0001 14.9998 20.0001Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M18.7498 20.0001C19.4401 20.0001 19.9998 19.4404 19.9998 18.7501C19.9998 18.0597 19.4401 17.5001 18.7498 17.5001C18.0594 17.5001 17.4998 18.0597 17.4998 18.7501C17.4998 19.4404 18.0594 20.0001 18.7498 20.0001Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M11.2498 23.7501C11.9401 23.7501 12.4998 23.1904 12.4998 22.5001C12.4998 21.8097 11.9401 21.2501 11.2498 21.2501C10.5594 21.2501 9.99976 21.8097 9.99976 22.5001C9.99976 23.1904 10.5594 23.7501 11.2498 23.7501Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M14.9998 23.7501C15.6901 23.7501 16.2498 23.1904 16.2498 22.5001C16.2498 21.8097 15.6901 21.2501 14.9998 21.2501C14.3094 21.2501 13.7498 21.8097 13.7498 22.5001C13.7498 23.1904 14.3094 23.7501 14.9998 23.7501Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M18.7498 23.7501C19.4401 23.7501 19.9998 23.1904 19.9998 22.5001C19.9998 21.8097 19.4401 21.2501 18.7498 21.2501C18.0594 21.2501 17.4998 21.8097 17.4998 22.5001C17.4998 23.1904 18.0594 23.7501 18.7498 23.7501Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Calculator>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders calendar without crashing 1`] = `
<Icon
  name="calendar"
>
  <DefaultIcon
    name="calendar"
  >
    <Calendar
      name="calendar"
    >
      <IconWrapper
        name="calendar"
      >
        <div
          className="CohubIcon calendarIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              height={24}
              viewBox="0 0 512 512"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M368.005 272h-96v96h96v-96zm-32-208v32h-160V64h-48v32h-24.01c-22.002 0-40 17.998-40 40v272c0 22.002 17.998 40 40 40h304.01c22.002 0 40-17.998 40-40V136c0-22.002-17.998-40-40-40h-24V64h-48zm72 344h-304.01V196h304.01v212z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Calendar>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders caretDown without crashing 1`] = `
<Icon
  name="caretDown"
>
  <DefaultIcon
    name="caretDown"
  >
    <CaretDown
      name="caretDown"
    >
      <IconWrapper
        name="caretDown"
      >
        <div
          className="CohubIcon caretDownIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41,7.84l4.59,4.58l4.59,-4.58l1.41,1.41l-6,6l-6,-6Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M0,-0.75h24v24h-24Z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </CaretDown>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders checkmark without crashing 1`] = `
<Icon
  name="checkmark"
>
  <DefaultIcon
    name="checkmark"
  >
    <Checkmark
      name="checkmark"
    >
      <IconWrapper
        name="checkmark"
      >
        <div
          className="CohubIcon checkmarkIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 16.17L4.83 12L3.41 13.41L9 19L21 7L19.59 5.59L9 16.17Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Checkmark>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders chevronDown without crashing 1`] = `
<Icon
  name="chevronDown"
>
  <DefaultIcon
    name="chevronDown"
  >
    <ChevronDown
      name="chevronDown"
    >
      <IconWrapper
        name="chevronDown"
      >
        <div
          className="CohubIcon chevronDownIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7,10l5,5l5,-5Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </ChevronDown>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders chevronLeft without crashing 1`] = `
<Icon
  name="chevronLeft"
>
  <DefaultIcon
    name="chevronLeft"
  >
    <ChevronLeft
      name="chevronLeft"
    >
      <IconWrapper
        name="chevronLeft"
      >
        <div
          className="CohubIcon chevronLeftIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.41,7.41l-1.41,-1.41l-6,6l6,6l1.41,-1.41l-4.58,-4.59Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </ChevronLeft>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders chevronRight without crashing 1`] = `
<Icon
  name="chevronRight"
>
  <DefaultIcon
    name="chevronRight"
  >
    <ChevronRight
      name="chevronRight"
    >
      <IconWrapper
        name="chevronRight"
      >
        <div
          className="CohubIcon chevronRightIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10,6l-1.41,1.41l4.58,4.59l-4.58,4.59l1.41,1.41l6,-6Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </ChevronRight>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders circle without crashing 1`] = `
<Icon
  name="circle"
>
  <DefaultIcon
    name="circle"
  >
    <Circle
      name="circle"
    >
      <IconWrapper
        defaultColor="hsl(114, 35%, 52%)"
        name="circle"
      >
        <div
          className="CohubIcon circleIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 25 25"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12.5"
                cy="12.5"
                fill="none"
                r="11.5"
                strokeWidth="2"
                style={
                  Object {
                    "stroke": "hsl(114, 35%, 52%)",
                    "transition": "stroke 300ms ease-in",
                  }
                }
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Circle>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders circleCheck without crashing 1`] = `
<Icon
  name="circleCheck"
>
  <DefaultIcon
    name="circleCheck"
  >
    <CircleCheck
      name="circleCheck"
    >
      <IconWrapper
        name="circleCheck"
      >
        <div
          className="CohubIcon circleCheckIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 6 6"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="black"
                fillOpacity="0"
                height="6"
                width="6"
              />
              <circle
                cx="3"
                cy="3"
                r="2.875"
                stroke="hsl(0, 2%, 88%)"
                strokeWidth="0.25"
              />
              <rect
                fill="hsl(0, 2%, 88%)"
                fillOpacity="0"
                height="2.04523"
                transform="translate(1.5 1.875)"
                width="3"
              />
              <path
                d="M1.5 2.89243L2.52262 3.91504L4.5 1.875"
                stroke="hsl(0, 2%, 88%)"
                strokeWidth="0.25"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </CircleCheck>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders circlePlus without crashing 1`] = `
<Icon
  name="circlePlus"
>
  <DefaultIcon
    name="circlePlus"
  >
    <CirclePlus
      name="circlePlus"
    >
      <IconWrapper
        defaultColor="hsl(114, 35%, 52%)"
        name="circlePlus"
      >
        <div
          className="CohubIcon circlePlusIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 18 18"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="9"
                cy="9"
                fill="hsl(114, 35%, 52%)"
                r="9"
              />
              <path
                d="M2.76904 9.00006H15.2306M8.99981 15.2308V2.76929"
                stroke="hsl(114, 35%, 95%)"
                strokeWidth="0.5"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </CirclePlus>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders circlePlusInverted without crashing 1`] = `
<Icon
  name="circlePlusInverted"
>
  <DefaultIcon
    name="circlePlusInverted"
  >
    <CirclePlusInverted
      name="circlePlusInverted"
    >
      <IconWrapper
        defaultColor="hsl(114, 35%, 52%)"
        name="circlePlusInverted"
      >
        <div
          className="CohubIcon circlePlusInvertedIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 18 18"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="9"
                cy="9"
                r="8.75"
                stroke="hsl(114, 35%, 52%)"
                strokeWidth="0.5"
              />
              <path
                d="M2.76904 9.00006H15.2306M8.99981 15.2308V2.76929"
                stroke="hsl(114, 35%, 52%)"
                strokeWidth="0.5"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </CirclePlusInverted>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders circleRemove without crashing 1`] = `
<Icon
  name="circleRemove"
>
  <DefaultIcon
    name="circleRemove"
  >
    <CircleRemove
      name="circleRemove"
    >
      <IconWrapper
        defaultColor="hsl(0, 2%, 12%)"
        name="circleRemove"
      >
        <div
          className="CohubIcon circleRemoveIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 6 6"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="hsl(0, 2%, 12%)"
                fillOpacity="0"
                height="6"
                width="6"
              />
              <circle
                cx="3"
                cy="3"
                r="2.875"
                stroke="hsl(0, 2%, 12%)"
                strokeWidth="0.25"
              />
              <path
                d="M1.5314 4.46859L4.46862 1.53138M4.46862 4.46858L1.5314 1.53137"
                stroke="hsl(0, 2%, 12%)"
                strokeWidth="0.25"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </CircleRemove>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders close without crashing 1`] = `
<Icon
  name="close"
>
  <DefaultIcon
    name="close"
  >
    <Close
      name="close"
    >
      <IconWrapper
        name="close"
      >
        <div
          className="CohubIcon closeIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19,6.41l-1.41,-1.41l-5.59,5.59l-5.59,-5.59l-1.41,1.41l5.59,5.59l-5.59,5.59l1.41,1.41l5.59,-5.59l5.59,5.59l1.41,-1.41l-5.59,-5.59Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Close>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders columns without crashing 1`] = `
<Icon
  name="columns"
>
  <DefaultIcon
    name="columns"
  >
    <Columns
      name="columns"
    >
      <IconWrapper
        name="columns"
      >
        <div
          className="CohubIcon columnsIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              height={24}
              version="1.1"
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M10,18h5v-13h-5v13Zm-6,0h5v-13h-5v13Zm12,-13v13h5v-13h-5Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Columns>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders controlPanel without crashing 1`] = `
<Icon
  name="controlPanel"
>
  <DefaultIcon
    name="controlPanel"
  >
    <ControlPanel
      name="controlPanel"
    >
      <IconWrapper
        name="controlPanel"
      >
        <div
          className="CohubIcon controlPanelIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 2L15 22M4 22H20C21.1046 22 22 21.1046 22 20V4C22 2.89543 21.1046 2 20 2H4C2.89543 2 2 2.89543 2 4V20C2 21.1046 2.89543 22 4 22Z"
                stroke="hsl(0, 2%, 88%)"
                strokeWidth="2"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </ControlPanel>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders dashboard without crashing 1`] = `
<Icon
  name="dashboard"
>
  <DefaultIcon
    name="dashboard"
  >
    <Dashboard
      name="dashboard"
    >
      <IconWrapper
        name="dashboard"
      >
        <div
          className="CohubIcon dashboardIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              height={24}
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
              <path
                d="M3,13h8v-10h-8v10Zm0,8h8v-6h-8v6Zm10,0h8v-10h-8v10Zm0,-18v6h8v-6h-8Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Dashboard>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders edit without crashing 1`] = `
<Icon
  name="edit"
>
  <DefaultIcon
    name="edit"
  >
    <Edit
      name="edit"
    >
      <IconWrapper
        name="edit"
      >
        <div
          className="CohubIcon editIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              height={24}
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M3,17.25v3.75h3.75l11.06,-11.06l-3.75,-3.75l-11.06,11.06Zm17.71,-10.21c0.39,-0.39 0.39,-1.02 0,-1.41l-2.34,-2.34c-0.39,-0.39 -1.02,-0.39 -1.41,0l-1.83,1.83l3.75,3.75l1.83,-1.83Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Edit>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders error without crashing 1`] = `
<Icon
  name="error"
>
  <DefaultIcon
    name="error"
  >
    <Error$1
      name="error"
    >
      <IconWrapper
        name="error"
      >
        <div
          className="CohubIcon errorIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              height={24}
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
              <path
                d="M12,2c-5.52,0 -10,4.48 -10,10c0,5.52 4.48,10 10,10c5.52,0 10,-4.48 10,-10c0,-5.52 -4.48,-10 -10,-10Zm1,15h-2v-2h2v2Zm0,-4h-2v-6h2v6Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Error$1>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders eye without crashing 1`] = `
<Icon
  name="eye"
>
  <DefaultIcon
    name="eye"
  >
    <Eye
      name="eye"
    >
      <IconWrapper
        name="eye"
      >
        <div
          className="CohubIcon eyeIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              height={24}
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
              <path
                d="M12,4.5c-5,0 -9.27,3.11 -11,7.5c1.73,4.39 6,7.5 11,7.5c5,0 9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5Zm0,12.5c-2.76,0 -5,-2.24 -5,-5c0,-2.76 2.24,-5 5,-5c2.76,0 5,2.24 5,5c0,2.76 -2.24,5 -5,5Zm0,-8c-1.66,0 -3,1.34 -3,3c0,1.66 1.34,3 3,3c1.66,0 3,-1.34 3,-3c0,-1.66 -1.34,-3 -3,-3Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Eye>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders filter without crashing 1`] = `
<Icon
  name="filter"
>
  <DefaultIcon
    name="filter"
  >
    <Filter
      name="filter"
    >
      <IconWrapper
        name="filter"
      >
        <div
          className="CohubIcon filterIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              height={24}
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M10,18h4v-2h-4v2Zm-7,-12v2h18v-2h-18Zm3,7h12v-2h-12v2Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Filter>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders forward without crashing 1`] = `
<Icon
  name="forward"
>
  <DefaultIcon
    name="forward"
  >
    <Back$1
      name="forward"
    >
      <IconWrapper
        name="forward"
      >
        <div
          className="CohubIcon forwardIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 4L10.59 5.41L16.17 11H4V13H16.17L10.59 18.59L12 20L20 12L12 4Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Back$1>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders laptop without crashing 1`] = `
<Icon
  name="laptop"
>
  <DefaultIcon
    name="laptop"
  >
    <Laptop
      name="laptop"
    >
      <IconWrapper
        name="laptop"
      >
        <div
          className="CohubIcon laptopIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              height={24}
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
              <path
                d="M20,18c1.1,0 1.99,-0.9 1.99,-2l0.01,-11c0,-1.1 -0.9,-2 -2,-2h-16c-1.1,0 -2,0.9 -2,2v11c0,1.1 0.9,2 2,2h-4c0,1.1 0.9,2 2,2h20c1.1,0 2,-0.9 2,-2h-4Zm-16,-13h16v11h-16v-11Zm8,14c-0.55,0 -1,-0.45 -1,-1c0,-0.55 0.45,-1 1,-1c0.55,0 1,0.45 1,1c0,0.55 -0.45,1 -1,1Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Laptop>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders list without crashing 1`] = `
<Icon
  name="list"
>
  <DefaultIcon
    name="list"
  >
    <List
      name="list"
    >
      <IconWrapper
        name="list"
      >
        <div
          className="CohubIcon listIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              height={24}
              version="1.1"
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M3,13h2v-2h-2v2Zm0,4h2v-2h-2v2Zm0,-8h2v-2h-2v2Zm4,4h14v-2h-14v2Zm0,4h14v-2h-14v2Zm0,-10v2h14v-2h-14Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </List>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders print without crashing 1`] = `
<Icon
  name="print"
>
  <DefaultIcon
    name="print"
  >
    <Print
      name="print"
    >
      <IconWrapper
        name="print"
      >
        <div
          className="CohubIcon printIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              height={24}
              version="1.1"
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M19,8h-14c-1.66,0 -3,1.34 -3,3v6h4v4h12v-4h4v-6c0,-1.66 -1.34,-3 -3,-3Zm-3,11h-8v-5h8v5Zm3,-7c-0.55,0 -1,-0.45 -1,-1c0,-0.55 0.45,-1 1,-1c0.55,0 1,0.45 1,1c0,0.55 -0.45,1 -1,1Zm-1,-9h-12v4h12v-4Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Print>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders report without crashing 1`] = `
<Icon
  name="report"
>
  <DefaultIcon
    name="report"
  >
    <Report
      name="report"
    >
      <IconWrapper
        name="report"
      >
        <div
          className="CohubIcon reportIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 30 30"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.25 23.75V3.75H3.75V25C3.75 25.69 4.31 26.25 5 26.25H26.25V23.75H6.25Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M13.75 15.5175L16.6162 18.3825C17.105 18.8712 17.895 18.8712 18.3837 18.3825L25.8837 10.8825L24.1162 9.11499L17.5 15.7325L14.6337 12.8662C14.145 12.3775 13.355 12.3775 12.8662 12.8662L7.86621 17.8662L9.63371 19.6337L13.75 15.5175Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Report>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders rows without crashing 1`] = `
<Icon
  name="rows"
>
  <DefaultIcon
    name="rows"
  >
    <Rows
      name="rows"
    >
      <IconWrapper
        name="rows"
      >
        <div
          className="CohubIcon rowsIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              height={24}
              version="1.1"
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
              <path
                d="M3,15h18v-2h-18v2Zm0,4h18v-2h-18v2Zm0,-8h18v-2h-18v2Zm0,-6v2h18v-2h-18Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Rows>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders sales without crashing 1`] = `
<Icon
  name="sales"
>
  <DefaultIcon
    name="sales"
  >
    <Sales
      name="sales"
    >
      <IconWrapper
        name="sales"
      >
        <div
          className="CohubIcon salesIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.8,10.9c-2.27,-0.59 -3,-1.2 -3,-2.15c0,-1.09 1.01,-1.85 2.7,-1.85c1.78,0 2.44,0.85 2.5,2.1h2.21c-0.07,-1.72 -1.12,-3.3 -3.21,-3.81v-2.19h-3v2.16c-1.94,0.42 -3.5,1.68 -3.5,3.61c0,2.31 1.91,3.46 4.7,4.13c2.5,0.6 3,1.48 3,2.41c0,0.69 -0.49,1.79 -2.7,1.79c-2.06,0 -2.87,-0.92 -2.98,-2.1h-2.2c0.12,2.19 1.76,3.42 3.68,3.83v2.17h3v-2.15c1.95,-0.37 3.5,-1.5 3.5,-3.55c0,-2.84 -2.43,-3.81 -4.7,-4.4Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Sales>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders save without crashing 1`] = `
<Icon
  name="save"
>
  <DefaultIcon
    name="save"
  >
    <Trash
      name="save"
    >
      <IconWrapper
        name="save"
      >
        <div
          className="CohubIcon saveIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
              <path
                d="M17,3h-12c-1.11,0 -2,0.9 -2,2v14c0,1.1 0.89,2 2,2h14c1.1,0 2,-0.9 2,-2v-12l-4,-4Zm-5,16c-1.66,0 -3,-1.34 -3,-3c0,-1.66 1.34,-3 3,-3c1.66,0 3,1.34 3,3c0,1.66 -1.34,3 -3,3Zm3,-10h-10v-4h10v4Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Trash>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders scales without crashing 1`] = `
<Icon
  name="scales"
>
  <DefaultIcon
    name="scales"
  >
    <Scales
      name="scales"
    >
      <IconWrapper
        name="scales"
      >
        <div
          className="CohubIcon scalesIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 30 30"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M29.8563 15.6975L29.8688 15.6913L25.7725 7.5H27.5V5H16.25V2.5H13.75V5H2.5V7.5H4.2275L0.1325 15.6913L0.145 15.6975C0.05875 15.865 0 16.0487 0 16.25C0 19.6963 2.80375 22.5 6.25 22.5C9.69625 22.5 12.5 19.6963 12.5 16.25C12.5 16.0487 12.4412 15.865 12.3563 15.6975L12.3688 15.6913L8.2725 7.5H13.75V25H10V27.5H20V25H16.25V7.5H21.7275L17.6325 15.6913L17.645 15.6975C17.5588 15.865 17.5 16.0487 17.5 16.25C17.5 19.6963 20.3037 22.5 23.75 22.5C27.1963 22.5 30 19.6963 30 16.25C30 16.0487 29.9412 15.865 29.8563 15.6975ZM6.25 9.045L9.2275 15H3.2725L6.25 9.045ZM6.25 20C4.62 20 3.23 18.955 2.715 17.5H9.785C9.27 18.955 7.88 20 6.25 20ZM26.7275 15H20.7725L23.75 9.045L26.7275 15ZM23.75 20C22.12 20 20.73 18.955 20.215 17.5H27.285C26.77 18.955 25.38 20 23.75 20Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Scales>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders search without crashing 1`] = `
<Icon
  name="search"
>
  <DefaultIcon
    name="search"
  >
    <Search
      name="search"
    >
      <IconWrapper
        name="search"
      >
        <div
          className="CohubIcon searchIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5,14h-0.79l-0.28,-0.27c0.98,-1.14 1.57,-2.62 1.57,-4.23c0,-3.59 -2.91,-6.5 -6.5,-6.5c-3.59,0 -6.5,2.91 -6.5,6.5c0,3.59 2.91,6.5 6.5,6.5c1.61,0 3.09,-0.59 4.23,-1.57l0.27,0.28v0.79l5,4.99l1.49,-1.49l-4.99,-5Zm-6,0c-2.49,0 -4.5,-2.01 -4.5,-4.5c0,-2.49 2.01,-4.5 4.5,-4.5c2.49,0 4.5,2.01 4.5,4.5c0,2.49 -2.01,4.5 -4.5,4.5Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Search>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders settings without crashing 1`] = `
<Icon
  name="settings"
>
  <DefaultIcon
    name="settings"
  >
    <Settings
      name="settings"
    >
      <IconWrapper
        name="settings"
      >
        <div
          className="CohubIcon settingsIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              height={24}
              version="1.1"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
              <path
                d="M19.43,12.98c0.04,-0.32 0.07,-0.64 0.07,-0.98c0,-0.34 -0.03,-0.66 -0.07,-0.98l2.11,-1.65c0.19,-0.15 0.24,-0.42 0.12,-0.64l-2,-3.46c-0.12,-0.22 -0.39,-0.3 -0.61,-0.22l-2.49,1c-0.52,-0.4 -1.08,-0.73 -1.69,-0.98l-0.38,-2.65c-0.03,-0.24 -0.24,-0.42 -0.49,-0.42h-4c-0.25,0 -0.46,0.18 -0.49,0.42l-0.38,2.65c-0.61,0.25 -1.17,0.59 -1.69,0.98l-2.49,-1c-0.23,-0.09 -0.49,0 -0.61,0.22l-2,3.46c-0.13,0.22 -0.07,0.49 0.12,0.64l2.11,1.65c-0.04,0.32 -0.07,0.65 -0.07,0.98c0,0.33 0.03,0.66 0.07,0.98l-2.11,1.65c-0.19,0.15 -0.24,0.42 -0.12,0.64l2,3.46c0.12,0.22 0.39,0.3 0.61,0.22l2.49,-1c0.52,0.4 1.08,0.73 1.69,0.98l0.38,2.65c0.03,0.24 0.24,0.42 0.49,0.42h4c0.25,0 0.46,-0.18 0.49,-0.42l0.38,-2.65c0.61,-0.25 1.17,-0.59 1.69,-0.98l2.49,1c0.23,0.09 0.49,0 0.61,-0.22l2,-3.46c0.12,-0.22 0.07,-0.49 -0.12,-0.64l-2.11,-1.65Zm-7.43,2.52c-1.93,0 -3.5,-1.57 -3.5,-3.5c0,-1.93 1.57,-3.5 3.5,-3.5c1.93,0 3.5,1.57 3.5,3.5c0,1.93 -1.57,3.5 -3.5,3.5Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Settings>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders shipping without crashing 1`] = `
<Icon
  name="shipping"
>
  <DefaultIcon
    name="shipping"
  >
    <Shipping
      name="shipping"
    >
      <IconWrapper
        name="shipping"
      >
        <div
          className="CohubIcon shippingIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 30 30"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2.5 10H22.5V15H25V8.75C25 8.74125 24.995 8.735 24.995 8.7275C24.9925 8.58125 24.9625 8.44 24.91 8.30375C24.8962 8.26875 24.8787 8.2375 24.8612 8.20375C24.8375 8.15625 24.8225 8.10375 24.79 8.0575L19.79 0.5575C19.5575 0.20875 19.1675 0 18.75 0H6.25C5.8325 0 5.4425 0.20875 5.21 0.55625L0.21 8.05625C0.17875 8.1025 0.1625 8.155 0.13875 8.20375C0.1225 8.2375 0.10375 8.26875 0.09 8.30375C0.0375 8.44 0.0075 8.58125 0.005 8.7275C0.005 8.735 0 8.74125 0 8.75V23.75C0 24.44 0.55875 25 1.25 25H10V22.5H2.5V10ZM21.4137 7.5H13.75V2.5H18.0812L21.4137 7.5ZM6.91875 2.5H11.25V7.5H3.58625L6.91875 2.5Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M29.6335 22.8663L27.1335 20.3663C26.8998 20.1325 26.5823 20 26.2498 20H24.9998V18.75C24.9998 18.06 24.441 17.5 23.7498 17.5H13.7498C13.0585 17.5 12.4998 18.06 12.4998 18.75V27.5C12.4998 28.19 13.0585 28.75 13.7498 28.75H15.346C15.7798 29.4938 16.576 30 17.4998 30C18.4235 30 19.2198 29.4938 19.6535 28.75H22.8473C23.281 29.4938 24.0773 30 25.001 30C25.9248 30 26.721 29.4938 27.1548 28.75H28.7498C29.441 28.75 29.9998 28.19 29.9998 27.5V23.75C29.9998 23.4188 29.8685 23.1 29.6335 22.8663ZM14.9998 20H22.4998V26.25H19.6535C19.221 25.505 18.4235 25 17.4998 25C16.576 25 15.7785 25.505 15.346 26.25H14.9998V20ZM27.4998 26.25H27.1535C26.721 25.505 25.9235 25 24.9998 25V22.5H25.7323L27.4998 24.2675V26.25Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Shipping>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders tagDollar without crashing 1`] = `
<Icon
  name="tagDollar"
>
  <DefaultIcon
    name="tagDollar"
  >
    <TagDollar
      name="tagDollar"
    >
      <IconWrapper
        name="tagDollar"
      >
        <div
          className="CohubIcon tagDollarIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 30 30"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25.0001 10V1.25C25.0001 0.55875 24.4414 0 23.7501 0H15.0002C14.6677 0 14.3502 0.13125 14.1165 0.36625L0.36656 14.1162C-0.122187 14.605 -0.122187 15.395 0.36656 15.8837L9.1165 24.6337C9.36025 24.8775 9.68024 25 10.0002 25C10.3202 25 10.6402 24.8775 10.884 24.6337L24.6339 10.8837C24.8689 10.65 25.0001 10.3325 25.0001 10ZM22.5002 9.4825L10.0002 21.9825L3.01779 15L15.5177 2.5H22.5002V9.4825Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M20.5177 4.48223C21.494 5.45854 21.494 7.04146 20.5177 8.01777C19.5414 8.99408 17.9585 8.99408 16.9822 8.01777C16.0059 7.04146 16.0059 5.45855 16.9822 4.48223C17.9585 3.50592 19.5414 3.50592 20.5177 4.48223Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M26.25 21.25H23.75C23.0612 21.25 22.5 20.6887 22.5 20C22.5 19.3113 23.0612 18.75 23.75 18.75H28.7499V16.25H26.25V15H23.75V16.25C21.6825 16.25 20 17.9325 20 20C20 22.0675 21.6825 23.75 23.75 23.75H26.25C26.9387 23.75 27.4999 24.3112 27.4999 25C27.4999 25.6888 26.9387 26.25 26.25 26.25H21.25V28.75H23.75V30H26.25V28.75C28.3174 28.75 29.9999 27.0675 29.9999 25C29.9999 22.9325 28.3174 21.25 26.25 21.25Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </TagDollar>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders trash without crashing 1`] = `
<Icon
  name="trash"
>
  <DefaultIcon
    name="trash"
  >
    <Trash$1
      name="trash"
    >
      <IconWrapper
        name="trash"
      >
        <div
          className="CohubIcon trashIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6,19c0,1.1 0.9,2 2,2h8c1.1,0 2,-0.9 2,-2v-12h-12v12Zm13,-15h-3.5l-1,-1h-5l-1,1h-3.5v2h14v-2Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Trash$1>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders triangle without crashing 1`] = `
<Icon
  name="triangle"
>
  <DefaultIcon
    name="triangle"
  >
    <Triangle
      name="triangle"
    >
      <IconWrapper
        defaultColor="hsl(0, 2%, 12%)"
        name="triangle"
      >
        <div
          className="CohubIcon triangleIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 10 8"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 0L9.33013 7.5H0.669873L5 0Z"
                fill="hsl(0, 2%, 12%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </Triangle>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders tripleDotsVertical without crashing 1`] = `
<Icon
  name="tripleDotsVertical"
>
  <DefaultIcon
    name="tripleDotsVertical"
  >
    <TripleDotsVertical
      name="tripleDotsVertical"
    >
      <IconWrapper
        name="tripleDotsVertical"
      >
        <div
          className="CohubIcon tripleDotsVerticalIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0,0h24v24h-24Z"
                fill="none"
              />
              <path
                d="M12,8c1.1,0 2,-0.9 2,-2c0,-1.1 -0.9,-2 -2,-2c-1.1,0 -2,0.9 -2,2c0,1.1 0.9,2 2,2Zm0,2c-1.1,0 -2,0.9 -2,2c0,1.1 0.9,2 2,2c1.1,0 2,-0.9 2,-2c0,-1.1 -0.9,-2 -2,-2Zm0,6c-1.1,0 -2,0.9 -2,2c0,1.1 0.9,2 2,2c1.1,0 2,-0.9 2,-2c0,-1.1 -0.9,-2 -2,-2Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </TripleDotsVertical>
  </DefaultIcon>
</Icon>
`;

exports[`Icon renders userGroup without crashing 1`] = `
<Icon
  name="userGroup"
>
  <DefaultIcon
    name="userGroup"
  >
    <UserGroup
      name="userGroup"
    >
      <IconWrapper
        name="userGroup"
      >
        <div
          className="CohubIcon userGroupIcon  "
          style={
            Object {
              "height": 24,
              "opacity": undefined,
              "transition": "opacity 300ms ease-in 200ms",
              "width": 24,
            }
          }
        >
          <div
            className="flex justify-center items-center"
          >
            <svg
              fill="none"
              height={24}
              viewBox="0 0 30 30"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25.4652 23.8238C26.3277 23.0225 26.8765 21.8913 26.8765 20.625C26.8765 18.2125 24.914 16.25 22.5015 16.25C20.089 16.25 18.1265 18.2125 18.1265 20.625C18.1265 21.8913 18.6752 23.0225 19.5377 23.8238C17.6902 24.4913 16.2515 25.7763 16.2515 27.5H18.7515C18.7515 26.7525 20.5177 25.8038 22.5015 25.8038C24.4852 25.8038 26.2515 26.7538 26.2515 27.5H28.7515C28.7515 25.775 27.3127 24.4913 25.4652 23.8238ZM22.5015 18.75C23.5352 18.75 24.3765 19.5913 24.3765 20.625C24.3765 21.6588 23.5352 22.5 22.5015 22.5C21.4677 22.5 20.6265 21.6588 20.6265 20.625C20.6265 19.5913 21.4677 18.75 22.5015 18.75Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M10.4652 23.8238C11.3277 23.0225 11.8765 21.8913 11.8765 20.625C11.8765 18.2125 9.91397 16.25 7.50146 16.25C5.08896 16.25 3.12646 18.2125 3.12646 20.625C3.12646 21.8913 3.67522 23.0225 4.53771 23.8238C2.69021 24.4913 1.25146 25.775 1.25146 27.5H3.75146C3.75146 26.7525 5.51771 25.8038 7.50146 25.8038C9.48522 25.8038 11.2515 26.7538 11.2515 27.5H13.7515C13.7515 25.775 12.3127 24.4913 10.4652 23.8238ZM7.50146 18.75C8.53521 18.75 9.37646 19.5913 9.37646 20.625C9.37646 21.6588 8.53521 22.5 7.50146 22.5C6.46771 22.5 5.62646 21.6588 5.62646 20.625C5.62646 19.5913 6.46771 18.75 7.50146 18.75Z"
                fill="hsl(0, 2%, 88%)"
              />
              <path
                d="M18.7512 13.75H21.2512C21.2512 12.025 19.8124 10.7413 17.9649 10.0738C18.8274 9.27252 19.3762 8.14127 19.3762 6.87502C19.3762 4.46252 17.4137 2.50002 15.0012 2.50002C12.5887 2.50002 10.6262 4.46252 10.6262 6.87502C10.6262 8.14127 11.1749 9.27252 12.0374 10.0738C10.1899 10.7413 8.75116 12.025 8.75116 13.75H11.2512C11.2512 13.0025 13.0174 12.0538 15.0012 12.0538C16.9849 12.0538 18.7512 13.0025 18.7512 13.75ZM15.0012 5.00002C16.0349 5.00002 16.8762 5.84127 16.8762 6.87502C16.8762 7.90877 16.0349 8.75002 15.0012 8.75002C13.9674 8.75002 13.1262 7.90877 13.1262 6.87502C13.1262 5.84127 13.9674 5.00002 15.0012 5.00002Z"
                fill="hsl(0, 2%, 88%)"
              />
            </svg>
          </div>
        </div>
      </IconWrapper>
    </UserGroup>
  </DefaultIcon>
</Icon>
`;
